Добавлен id к ссылке

--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -11,7 +11,7 @@
     <ul>
         {% for podrazdelenie in podrazd_list %}
         <li>
-            <a href="{% url specializaciya %}{{ podrazdelenie.1 }}">
+            <a id="{{ podrazdelenie.1 }}" class="spec" href="{% url specializaciya %}{{ podrazdelenie.1 }}">
                 {{ podrazdelenie.0 }} ({{ podrazdelenie.0.address }})
             </a>
         </li>
