--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb" dir="ltr" >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html" xml:lang="en-gb" lang="en-gb" dir="ltr">
 	<head>
 
         <meta content="ru-ru" http-equiv="Content-Language" />
@@ -25,69 +25,47 @@
 		<!--header-->
         <div class="no_print">
 		<div class="header">
-            <form action="" method="post">
-				<div class="search">
-					<div class="search-input">
-						<input name="searchword" id="mod_search_searchword" maxlength="20" alt="Search" class="inputbox" type="text" size="20" />
-					</div>
-					<div class="search-button">
-						<input type="image" value="Search" class="button" src="{{ STATIC_URL }}/static/images/searchButton.gif" onclick="this.form.searchword.focus();"/>
-					</div>
-				</div>
-			</form>
 			<ul class="menu-nav">
-				<li id="current" class="top active item53">
-                    <a href="{% url mo %}"><strong>МО</strong></a>
+				<li class="top item53">
+                    {% if step > 1 %}<a href="{% url mo %}">{% elif step == 1 %}<a href="{% url mo %}" class="current">{% else %}<a>{% endif %}МО</a>
 				</li>
 				<li class="top item54">
-                    <a href="{% url lpu %}"><strong>ЛПУ</strong></a>
+                    {% if step > 2 %}<a href="{% url lpu %}">{% elif step == 2 %}<a href="{% url lpu %}" class="current">{% else %}<a>{% endif %}ЛПУ</a>
 				</li>
 				<li class="top item55">
-					<a href="{% url podrazdelenie %}"><strong>Подразделение</strong></a>
-				</li>
+                    {% if step > 3 %}<a href="{% url podrazdelenie %}">{% elif step == 3 %}<a href="{% url podrazdelenie %}" class="current">{% else %}<a>{% endif %}Подразделение/Специализация/Врач</a>
+				{% comment %}
+                </li>
 				<li class="top item56">
-					<a href="{% url specializaciya %}"><strong>Специализация</strong></a>
+                    {% if step > 4 %}<a href="{% url specializaciya %}">{% elif step == 4 %}<a href="{% url specializaciya %}" class="current">{% else %}<a>{% endif %}Специализация</a>
 				</li>
 				<li class="top item57">
-					<a href="{% url vrach %}"><strong>Врач</strong></a>
+                    {% if step > 5 %}<a href="{% url vrach %}">{% elif step == 5 %}<a href="{% url vrach %}" class="current">{% else %}<a>{% endif %}Врач</a>
 				</li>
+                {% endcomment %}
 				<li class="top item58">
-					<a href="{% url vremya %}"><strong>Время</strong></a>
+                    {% if step > 6 %}<a href="{% url vremya %}">{% elif step == 6 %}<a href="{% url vremya %}" class="current">{% else %}<a>{% endif %}Время</a>
 				</li>
                 <li class="top item59">
-                    <a href=""><strong>Пациент</strong></a>
+                    {% if step > 7 %}<a href="">{% elif step == 7 %}<a href="" class="current">{% else %}<a>{% endif %}Пациент</a>
                 </li>
                 <li class="top item60">
-                    <a href=""><strong>Запись</strong></a>
+                    {% if step > 8 %}<a href="">{% elif step == 8 %}<a href="" class="current">{% else %}<a>{% endif %}Запись</a>
                 </li>
 			</ul>	    
 		</div>
         </div>
-
-	
+        <br />
+        <br />
 		<!--slider-->
 		<div class="wrapper-content content-top">
 			<div class="clear">
-				<a href="#" class="link1"> </a>
-				<a href="#" class="link2"> </a>
-				<a href="#" class="link3"> </a>
+                <div class="tabb">
+                    {% block content %}
+                    {% endblock %}
+                </div>
 			</div>
 		</div>
 	</div>
-
-
-        <p>{% if step > 1 %}<a href="{% url mo %}">{% elif step == 1 %}<b>{% endif %}1.МО{% if step > 1 %}</a>{% elif step == 1 %}</b>{% endif %} -
-            {% if step > 2 %}<a href="{% url lpu %}">{% elif step == 2 %}<b>{% endif %}2.ЛПУ{% if step > 2 %}</a>{% elif step == 2 %}</b>{% endif %} -
-            {% if step > 3 %}<a href="{% url podrazdelenie %}">{% elif step == 3 %}<b>{% endif %}3.Подразделение{% if step > 3 %}</a>{% elif step == 3 %}</b>{% endif %} -
-            {% if step > 4 %}<a href="{% url specializaciya %}">{% elif step == 4 %}<b>{% endif %}4.Специализация{% if step > 4 %}</a>{% elif step == 4 %}</b>{% endif %} -
-            {% if step > 5 %}<a href="{% url vrach %}">{% elif step == 5 %}<b>{% endif %}5.Врач{% if step > 5 %}</a>{% elif step == 5 %}</b>{% endif %} -
-            {% if step > 6 %}<a href="{% url vremya %}">{% elif step == 6 %}<b>{% endif %}6.Время{% if step > 6 %}</a>{% elif step == 6 %}</b>{% endif %} -
-            {% if step > 7 %}<a href="">{% elif step == 7 %}<b>{% endif %}7.Пациент{% if step > 7 %}</a>{% elif step == 7 %}</b>{% endif %} -
-            {% if step > 8 %}<a href="">{% elif step == 8 %}<b>{% endif %}8.Запись{% if step > 8 %}</a>{% elif step == 8 %}</b>{% endif %}</p>
-
-    {% block content %}
-    {% endblock %}
-
-
 	</body>
 </html>
