--- a/ElReg/elreg_app/templates/vremya.html
+++ b/ElReg/elreg_app/templates/vremya.html
@@ -53,5 +53,9 @@
 {% endif %}
 
 
-<p><a href="{% url vrach %}">Назад</a></p>
+<p>
+    <a href="{% url podrazdelenie %}">
+        <img src="{{ STATIC_URL }}/static/images/btn_back_black.gif" alt="Назад">
+    </a>
+</p>
 {% endblock %}
