--- a/ElReg/elreg_app/templates/mo.html
+++ b/ElReg/elreg_app/templates/mo.html
@@ -15,7 +15,7 @@
 </table>
 <p>
     <a href="{% url lpu %}search/">
-        Поиск ЛПУ
+        <img src="{{ STATIC_URL }}/static/images/btn_search_blue.gif" alt="Поиск ЛПУ">
     </a>
 </p>
 {% endblock %}
