--- a/ElReg/elreg_app/templates/pacient.html
+++ b/ElReg/elreg_app/templates/pacient.html
@@ -85,5 +85,9 @@
 </form>
 
 
-<p><a href="{% url vremya %}">Назад</a></p>
+<p>
+    <a href="{% url vremya %}">
+        <img src="{{ STATIC_URL }}/static/images/btn_back_black.gif" alt="Назад">
+    </a>
+</p>
 {% endblock %}
