--- a/ElReg/elreg_app/templates/lpu.html
+++ b/ElReg/elreg_app/templates/lpu.html
@@ -2,60 +2,36 @@
 
 
 {% block content %}
-<!--<script type="text/javascript" src="search.js"></script>-->
-<script src="jquery-ui-1.9.0.custom.min.js" type="text/javascript"></script>
-
-<!--<script>-->
-    <!--$(function() {-->
-        <!--function log( message ) {-->
-            <!--$( "<div/>" ).text( message ).prependTo( "#log" );-->
-            <!--$( "#log" ).scrollTop( 0 );-->
-        <!--}-->
-        <!--$( "#birds" ).autocomplete({-->
-            <!--source: "sug/suggest.php",-->
-            <!--minLength: 2,-->
-            <!--select: function( event, ui ) {-->
-                <!--log( ui.item ?-->
-                    <!--"Выбрано: " + ui.item.value + " aka " + ui.item.id :-->
-                    <!--"Нет ничего подходящего " + this.value );-->
-            <!--}-->
-        <!--});-->
-    <!--});-->
-<!--</script>-->
-
-
 
 <form id="form" action="" method="post" name="frm">
     <fieldset>
-        <div class="field">
-            <input type="text" name="search" id="txtSearch" maxlength="50" size="30" onkeyup="searchOpen()" />
-
-            <input type="text" name="city" id="firstName" value="Город" maxlength="50" size="30" autocomplete="on" />
-
-            <input type="text" name="region" id="patronymic" value="Район" maxlength="50" size="30" autocomplete="on" />
+        <div align="center">
+            <input type="text" name="search" id="txtSearch" maxlength="100" size="100" value="Наименование ЛПУ" onfocus="if(this.value=='Наименование ЛПУ') this.value='';" onBlur="if(this.value=='') this.value='Наименование ЛПУ';" onkeyup="searchOpen()" />
         </div>
+        <br />
+        <table class="new">
+        </table>
     </fieldset>
 </form>
 
 {% if hospitals_list %}
+<br />
 <p>
-    {{ current_region }}
+    Муниципальное образование: {{ current_region }}
 </p>
 
-<p>
-    <ul>
+<table>
+    <tr>
+        <td>
         {% for hospital in hospitals_list %}
-        <li>
             <a href="{% url podrazdelenie %}{{ hospital.uid|slice:":2"|cut:"/" }}/">
                 {{ hospital.title }}
             </a>
-        </li>
         {% endfor %}
-    </ul>
-</p>
-{% endif %}
-<br ><table class="new">
+        </td>
+    </tr>
 </table>
+{% endif %}
 
 <p>
     <a href="{% url mo %}">
@@ -68,40 +44,15 @@
 <script type="text/javascript">
     function searchOpen() {
         var search = $('#txtSearch').val();
-//        var data = {
-//            search: search
-//        };
-//        $.ajax({
-//            url: '/search/',
-//            data: data,
-//            dataType: 'jsonp',
-//            jsonp: 'callback',
-//            jsonpCallback: 'searchResult'
-//        });
         $.getJSON("/search/", {search: search}, function(data) {
             var $items = [];
             $.each(data, function(key, val) {
-                $items.push('<tr><td><a id="' + key + '">' + val + '</a></td></tr>');
+                $items.push('<tr><td><a href="/podrazdelenie/' + key + '/">' + val + '</a></td></tr>');
             });
             $('table.new tr').hide();
             $($items.join('')).fadeIn('fast').appendTo('table.new');
-//            var $items = [];
-//            $('table.secondTable tr').hide();
-//            $('table.thirdTable tr').hide();
-//            $.each(data, function(key, val) {
-//                $items.push('<tr><td><a class="prof">' + val + '</a></td></tr>');
-//            });
-//            $('#ttt').append(data);
-//            $($items.join('')).fadeIn('slow').appendTo('table.secondTable');
         });
     }
-
-//    function searchResult(data) {
-//        alert(data);
-//        $( "#txtSearch" ).autocomplete ({
-//            source: data
-//        });
-//    }
 </script>
 
 {% endblock %}
