Удален не используемый id

--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" type="text/css" />
 	</head>
 	
-	<body id="body">
+	<body>
     <div class="main"> 
 		<!--header-->
         <div class="no_print">
