Добавлен новый класс и изменено изображение

--- a/ElReg/elreg_app/templates/mo.html
+++ b/ElReg/elreg_app/templates/mo.html
@@ -14,8 +14,8 @@
     {% endfor %}
 </table>
 <p>
-    <a href="{% url lpu %}search/">
-        <img src="{{ STATIC_URL }}/static/images/btn_search_blue.gif" alt="Поиск ЛПУ">
+    <a href="{% url lpu %}search/" class="container">
+        <img src="{{ STATIC_URL }}/static/images/lpu_search_btn.gif" alt="Поиск ЛПУ">
     </a>
 </p>
 {% endblock %}
