Добавлен новый класс и изменено изображение

--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -38,8 +38,8 @@
 </p>
 <div id="ttt">
     <p>
-        <a href="{% url lpu %}">
-            <img src="{{ STATIC_URL }}/static/images/btn_back_black.gif" alt="Назад">
+        <a href="{% url lpu %}" class="container">
+            <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">
         </a>
     </p>
 </div>
