--- a/ElReg/elreg_app/templates/email.html
+++ b/ElReg/elreg_app/templates/email.html
@@ -1,18 +1,17 @@
 <html>
     <body>
         <table align="center">
-            <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ</th></tr>
-            <tr><td>ФИО (Пациент):</td><td colspan="2">{{ pacientName }}</td></tr>
-            <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }}</td></tr>
-            <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
-            <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
-            <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}</td></tr>
-            <tr><td>Врач:</td><td colspan="2">{{ ticketStatus.doctor.lastName }} {{ ticketStatus.doctor.firstName }} {{ ticketStatus.doctor.patronymic }} ({{ prof }})</td></tr>
-            <tr><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
-            <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
-            <tr><td colspan="3">Заметка 1</td></tr>
-            <tr><td colspan="3">Заметка 2</td></tr>
-            <tr><td colspan="3">Заметка 3</td></tr>
+            <tr><th colspan="3" align="center">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</th></tr>
+            <tr align="justify"><td>ФИО (Пациент):</td><td colspan="2">{{ pacientName }}</td></tr>
+            <tr align="justify"><td>Дата рождения:</td><td colspan="2">{{ birthday }}</td></tr>
+            <tr align="justify"><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
+            <tr><th colspan="3" align="center">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
+            <tr align="justify"><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}</td></tr>
+            <tr align="justify"><td>Врач:</td><td colspan="2">{{ ticketStatus.doctor.lastName }} {{ ticketStatus.doctor.firstName }} {{ ticketStatus.doctor.patronymic }} ({{ prof }})</td></tr>
+            <tr align="justify"><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
+            <tr><th colspan="3" align="center">ВНИМАНИЕ:</th></tr>
+            <tr align="justify"><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
+            <tr align="justify"><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
         </table>
     </body>
 </html>
