--- a/ElReg/elreg_app/templates/vremya.html
+++ b/ElReg/elreg_app/templates/vremya.html
@@ -25,23 +25,23 @@
     </tr>
 
     {% for row in ticketTable %}
-    <tr>
+        <tr>
         {% for cell in row %}
-        <td align="center" class="{{ cell.status }}">
-            {% if cell.status == 'free' %}
-                {% if cell.start > now %}
+            {% if cell.start > now %}
+                <td align="center" class="{{ cell.status }}">
+                {% if cell.status == 'free' %}
                     <div><button type=submit class="cell_btn" name=ticket value="{{ cell.start.date|date:"d:m:Y" }}-{{ cell.start.time }}-{{ cell.finish.time }}">
                         {{ cell.start.time|time:"H:i" }}
                     </button></div>
-                {% endif %}
-            {% elif cell.status == 'locked'%}
-                {% if cell.start > now %}
+                {% else %}
                     {{ cell.start.time|time:"H:i" }}
                 {% endif %}
+            {% else %}
+                <td align="center">
             {% endif %}
         </td>
         {% endfor %}
-    </tr>
+        </tr>
     {% endfor %}
 
     <tr>
